# EmbeddedSystems

./: CMakeLists.txt
include/: button.h  led.h  lwipopts.h  microphone.h  mqtt.h
src/: button.c  led.c  main.c  microphone.c  mqtt.c  ping.c
